# steam-audio

unreal/: setup.py
unreal/src/: CMakeLists.txt
unreal/src/SteamAudioUnreal/: SteamAudioUnreal.uproject
unreal/src/SteamAudioUnreal/Plugins/SteamAudio/: SteamAudio.uplugin  SteamAudio.uplugin.in
unreal/src/SteamAudioUnreal/Plugins/SteamAudio/Source/SteamAudio/Private/: SteamAudioScene.cpp
unreal/src/SteamAudioUnreal/Plugins/SteamAudio/Source/SteamAudioEditor/Private/: SteamAudioBakeWindow.cpp  SteamAudioEditorModule.cpp
unreal/src/SteamAudioUnreal/Plugins/SteamAudio/Source/SteamAudioSDK/: SteamAudioSDK.Build.cs
